# Copyright (c) Saga Inc.
# Distributed under the terms of the GNU Affero General Public License v3.0 License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mito-ai-cli"
version = "0.1.0"
description = "Command-line runner for Mito AI agent (notebook output)."
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [{ name = "Saga Inc." }]
dependencies = [
    "mito-ai-core",
    "mito-ai-python-tool-executor",
]

[project.scripts]
mito-ai = "mito_ai_cli.main:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-timeout",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
markers = [
    "integration: live CLI / full stack (opt-in via MITO_AI_CLI_E2E=1)",
]

[tool.hatch.build.targets.wheel]
packages = ["mito_ai_cli"]
