[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mito-ai-core"
version = "0.1.0"
description = "Pure-Python AI backbone for Mito – providers, models, prompts, and utilities with zero Jupyter Server dependencies."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [
    { name = "Saga Inc." },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Data validation
    "pydantic",
    # HTTP (async) — mito_server_utils uses Tornado AsyncHTTPClient
    "aiohttp>=3.8.0",
    "tornado>=6.2.0",
    # LLM provider SDKs
    "openai>=1.0.0",
    "anthropic>=0.6.81",
    "google-genai",
    # Telemetry
    "analytics-python",
    # Misc
    "requests>=2.25.0",
    "jinja2>=3.0.3",
    "sseclient-py>=1.8.0",
]

[project.optional-dependencies]
litellm = ["litellm"]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "mypy",
    "types-requests",
]

[tool.pytest.ini_options]
timeout = 30

[tool.hatch.build.targets.wheel]
packages = ["mito_ai_core"]
