[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mito-ai-helper-github-copilot"
version = "0.0.1"
description = "Enables GitHub Copilot as the only LLM provider for Mito AI (enterprise/admin install)."
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mito-ds/monorepo"

[tool.setuptools.packages.find]
where = ["."]
include = ["mito_ai_helper_github_copilot*"]
