[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mitosheet_helper_4c2a"
version = "0.0.1"
authors = [
  { name="Aaron Diamond-Reivich", email="aaron@sagacollab.com" },
]
description = "A helper package for mitosheet."
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mito-ds/monorepo"
"Bug Tracker" = "https://github.com/mito-ds/monorepo/issues"