[metadata]
name = mitosheet_private
version = 0.3.0
url = https://github.com/mito-ds/mito
author = Aaron Diamond-Reivich
author_email = aarondr77@gmail.com
description = The mitosheet_private package is a wrapper around the mitosheet package.
license = GNU Affero General Public License v3

[options]
install_requires =
    mitosheet>0.1.504

[options.extras_require]
deploy =
    wheel
    twine
    setuptools==56.0.0

[options.packages.find]
include =
    mitosheet_private

[options.package_data]
* = *.txt, *.rst, *.md
